# inventia-spoke-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: master-data-read-access-spec.md
docs/adr/: 0001-no-iunitofwork-asyncsession-is-uow.md  0002-session-factory-resolver-pattern.md  0003-otel-helpers-opt-in-extra.md  0004-master-data-read-access.md  README.md
inventia_spoke_sdk/: __init__.py  arq.py  enforcement.py  exceptions.py  fastapi.py  jwks.py  jwt_validator.py  mcp.py  outbox.py  principal.py
inventia_spoke_sdk/db/: __init__.py  session.py
inventia_spoke_sdk/masterdata/: __init__.py  crypto.py  drift.py  models.py  repository.py
inventia_spoke_sdk/services/: __init__.py  base.py
inventia_spoke_sdk/telemetry/: __init__.py  _compat.py  arq_propagation.py  decorator.py  setup.py
inventia_spoke_sdk/testing/: __init__.py  db.py
tests/: test_base_service.py  test_db_session.py  test_enforcement.py  test_fastapi_helper.py  test_jwks.py  test_jwt_validator.py  test_jwt_validator_jwks.py  test_jwt_validator_v04.py  test_mcp_discovery.py  test_multi_validator.py  test_principal.py  test_principal_v04.py  test_rls_guard.py  test_telemetry.py  test_tenant_crosscheck.py  test_testing_helpers.py
tests/masterdata/: test_drift.py  test_repository.py
