[project]
name = "inventia-spoke-sdk"
version = "0.8.0"
description = "Inventia Spoke SDK — JWT validation, SpokePrincipal, session factory + BaseService for the Hub↔Spoke contract."
authors = [{ name = "Max Brito", email = "maxlbrito@inventia.com.br" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "pyjwt>=2.8",
    "httpx>=0.27",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
masterdata = ["cryptography>=42.0"]
testing = ["pytest>=8.3", "pytest-asyncio>=0.24", "aiosqlite>=0.19"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "respx>=0.21",
    "cryptography>=42.0",
    "aiosqlite>=0.19",
    "fastapi>=0.110",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inventia_spoke_sdk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=inventia_spoke_sdk --cov-report=term-missing"
